Results-summary challenge

--- a/results-summary-component/src/assets/styles/base/_base.scss
+++ b/results-summary-component/src/assets/styles/base/_base.scss
@@ -13,7 +13,7 @@ body {
   font-size: var(--fs-body);
   line-height: var(--lh-body);
   font-weight: var(--fw-body);
-  color: var(--Pale-Purple);
+  color: var(--Dark-Navy);
 }
 
 a a:hover,
