--- a/results-summary-component/src/assets/styles/abstract/_fonts.scss
+++ b/results-summary-component/src/assets/styles/abstract/_fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
-  font-family: "Work Sans";
+  font-family: "Hanken Grotesk";
   font-weight: 100 900;
   font-display: swap;
   font-style: normal;
-  src: url("../fonts/WorkSans-VariableFont_wght.ttf")
+  src: url("../fonts/HankenGrotesk-VariableFont_wght.ttf")
     format("truetype-variations");
 }
