--- a/bmi-calculator/src/index.css
+++ b/bmi-calculator/src/index.css
@@ -54,12 +54,16 @@
 }
 
 .right-curve::after {
+  content: "";
   position: absolute;
   border-radius: 32px;
   top: 120%;
   right: 50%;
   width: 94px;
   height: 122px;
+  background-image: url("./pattern-curved-line-right.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
   @apply hidden xl:block;
 }
 
@@ -71,5 +75,8 @@
   right: 20%;
   width: 85px;
   height: 200px;
+  background-image: url("./pattern-curved-line-left.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
   @apply hidden xl:block;
 }
