--- a/bmi-calculator/src/index.css
+++ b/bmi-calculator/src/index.css
@@ -61,7 +61,7 @@
   right: 50%;
   width: 94px;
   height: 122px;
-  background-image: url("./pattern-curved-line-right.svg");
+  background-image: url("/pattern-curved-line-right.svg");
   background-repeat: no-repeat;
   background-size: contain;
   @apply hidden xl:block;
@@ -75,7 +75,7 @@
   right: 20%;
   width: 85px;
   height: 200px;
-  background-image: url("./pattern-curved-line-left.svg");
+  background-image: url("/pattern-curved-line-left.svg");
   background-repeat: no-repeat;
   background-size: contain;
   @apply hidden xl:block;
